feat: Implement property options dropdown list drawer - MEED-7996,MEED-7997 - Meeds-io/MIPs#171 (#4318)
Implement property options dropdown list drawer